--- a/templates/report.html
+++ b/templates/report.html
@@ -24,17 +24,7 @@
 
 <body>
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#ses-01_task-object_run-01">Object Naming</a></li>
-            <li class="nav-item"><a class="nav-link" href="#ses-01_task-rhyme_run-01">Rhyme Matching</a></li>
-            <li class="nav-item"><a class="nav-link" href="#ses-01_task-scenemem_run-01">Scene Memory</a></li>
-            <li class="nav-item"><a class="nav-link" href="#ses-01_task-sentence_run-01">Sentence Completion</a></li>
-            <li class="nav-item"><a class="nav-link" href="#ses-01_task-wordgen_run-01">Wordgen</a></li>
-        </ul>
-    </div>
-    </nav>
+    {{navbar}}
 
     <h1>{{ title }}</h1>
 
