--- a/templates/task_section.html
+++ b/templates/task_section.html
@@ -1,4 +1,4 @@
-<div id={{section_name}} style="margin-top: 50px">
+<div id={{section_name}} style="margin-top: 75px">
     <h1 class="run-title">{{task_title}}</h1>
     <h3 class="elem-title">Glass brain</h3>
     <div class="elem-image">
@@ -10,13 +10,14 @@
 
     <h3 style="margin-top: 20px"> Statistics </h3>
 
-    <div class="table" style="border: 1px solid black;"></div>
+    <div style="border: 1px solid black;">
     <div class="table">
           {{table}}
     </div>
     <div class="barplot">
         <object data={{bar_path}}>
         </object>
+    </div>
     </div>
 </div>
 
