consolidated legend table

--- a/templates/summary_section.html
+++ b/templates/summary_section.html
@@ -14,10 +14,7 @@
                 <th>Key</th><th>Definition</th>
                 <tr>
                     <td>tSNR</td>
-                    <td> <img src= {{tsnr_eq}}> ...where
-                    <img src= {{mean_signal_eq}}>  is the average BOLD signal (across time),
-                    and <img src={{std_dev_eq}}> is the
-                    corresponding temporal standard-deviation map.</td>
+                    <td> the average BOLD signal (across time) divided by the corresponding temporal standard-deviation map.</td>
                 </tr>
                 <tr> <td>Left/Right %</td> <td>Activated voxels (p < 0.05, corr.) as a percentage of the specified
                     ROI in the left/right side </td>
