--- a/templates/task_section.html
+++ b/templates/task_section.html
@@ -1,6 +1,10 @@
 <div id={{section_name}} style="margin-top: 75px">
     <h1 class="run-title">{{task_title}}</h1>
     <h3 class="elem-title">Glass brain</h3>
+    <ul class="elem-desc">
+        <li>tSNR = {{mean_tsnr}}</li>
+        <li>Mean FD = {{mean_fd}}</li>
+    </ul>
     <div class="elem-image">
         <object class="svg-reportlet" type="image/svg+xml" data={{gb_path}}>
         </object>
