orientation warning, scenemem to bottom, divider line, run number

--- a/templates/summary_section.html
+++ b/templates/summary_section.html
@@ -29,4 +29,5 @@
                     <td>The average frame-wise displacement, an expression of instantaneous head motion</a></td>
                 </tr>
                 </table>
+        <h3 style="color:red;" style="margin-top: 50%">NOTE: activation maps are oriented in neurological convention (i.e. RAS)</h3>
     </div>
