--- a/templates/report.html
+++ b/templates/report.html
@@ -81,6 +81,16 @@
         padding: 10px;
         background-color: #F8F9FA;
     }
+
+    hr {
+        display: block;
+        margin-top: 2.5em;
+        margin-bottom: 0em;
+        margin-left: auto;
+        margin-right: auto;
+        border-style: inset;
+        border-width: 5px;
+    }
     </style>
     <title>{{ title }}</title>
 </head>
