--- a/templates/task_section.html
+++ b/templates/task_section.html
@@ -22,13 +22,22 @@
     <h3 style="margin-top: 20px"> Statistics </h3>
 
     <div style="border: 1px solid black;">
-    <div class="table">
-          {{table}}
+        <h4 style="margin-left: 20px; margin-top: 10px"> Percentage of activated voxels in ROI </h4>
+        <div class="table">
+              {{vox_table}}
+        </div>
+        <div class="barplot">
+            <object data={{vox_bar_path}}></object>
+        </div>
     </div>
-    <div class="barplot">
-        <object data={{bar_path}}>
-        </object>
-    </div>
+    <div style="border: 1px solid black;">
+        <h4 style="margin-left: 20px; margin-top: 10px"> Mean z-score in ROI </h4>
+        <div class="table">
+              {{mean_table}}
+        </div>
+        <div class="barplot">
+            <object data={{mean_bar_path}}></object>
+        </div>
     </div>
 </div>
 
