--- a/templates/report.html
+++ b/templates/report.html
@@ -1,24 +1,28 @@
-<?xml version="1.0" encoding="utf-8" ?> <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0
-    Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> <html
-    xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
-<head> <meta http-equiv="Content-Type"
-    content="text/html; charset=utf-8" /> <meta name="generator" content="Docutils 0.12:
+<head>
+    <meta http-equiv="Content-Type"
+    content="text/html; charset=utf-8" />
+    <meta name="generator" content="Docutils 0.12:
     http://docutils.sourceforge.net/" />
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous">
-    </script>
-    <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <style type="text/css">.sub-report-title {} .run-title {}
+    <style type="text/css">
+
+    .sub-report-title {} .run-title {}
+
+    @media print {
+        .page-break { display: block; page-break-before: always; }
+    }
 
     h1 { padding-top: 35px; }
     h2 { padding-top: 20px; }
@@ -29,8 +33,10 @@
 
     div.elem-image {
       width: 100%;
-      page-break-before:always;
+<!--      page-break-before:always;-->
     }
+
+    #responsive-image {  width: 95%;  height: auto; }
 
     div.table {
       display: inline-block;
