--- a/templates/task_section.html
+++ b/templates/task_section.html
@@ -13,12 +13,16 @@
         <li>Mean FD = {{mean_fd}}</li>
     </ul>
     <div class="elem-image">
-        <object class="svg-reportlet" type="image/svg+xml" data={{gb_path}}>
-        </object>
+    {% if is_png == false %}
+            <object class="svg-reportlet" type="image/svg+xml" data={{gb_path}}></object>
+    {% else %}
+            <img src="{{gb_path}}" id="responsive-image">
+    {% endif %}
     </div>
 
-    <h3 style="margin-top: 20px"><a href={{viewer_path}} >Statistical Map Viewer</a></h3>
-
+    {% if is_png == false %}
+        <h3 style="margin-top: 20px"><a href={{viewer_path}} >Statistical Map Viewer</a></h3>
+    {% endif %}
     <h3 style="margin-top: 20px"> Statistics </h3>
 
     <div style="border: 1px solid black;">
@@ -30,6 +34,8 @@
             <object data={{vox_bar_path}}></object>
         </div>
     </div>
+
+    {% if is_png == false %}
     <div style="border: 1px solid black;">
         <h4 style="margin-left: 20px; margin-top: 10px"> Mean z-score in ROI </h4>
         <div class="table">
@@ -39,5 +45,6 @@
             <object data={{mean_bar_path}}></object>
         </div>
     </div>
+    {% endif %}
 </div>
-
+<div class="page-break"></div>
