--- a/templates/summary_section.html
+++ b/templates/summary_section.html
@@ -30,6 +30,10 @@
                     <td><img src={{asym_ratio_eq}}
                     ...where “left activation” = “Left %” (as above)></td>
                 </tr>
+                <tr>
+                    <td>Sup./Mid./Inf. TG</td>
+                    <td>>Superior/Middle/Inferior Temporal Gyrus</td>
+                </tr>
 
                 </table>
         <h3 style="color:red;" style="margin-top: 50%">NOTE: activation maps are oriented in neurological convention (i.e. RAS)</h3>
