--- a/templates/summary_section.html
+++ b/templates/summary_section.html
@@ -10,6 +10,7 @@
                </ul>
           <li>FWHM: {{fwhm}}</li>
           <li>Cluster extent threshold: {{cthresh}}</li>
+          <li>Alpha: {{alpha}}</li>
         </ul>
         <h3> Reference table </h3>
         <table class="table table-striped">
