session name thing

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
             {% for task in task_list %}
-                <li class="nav-item"><a class="nav-link" href={{'\"#ses-01_task-'+task+'_run-01\"'}}>{{task}}</a></li>
+                <li class="nav-item"><a class="nav-link" href={{'\"#task-'+task+'_run-01\"'}}>{{task}}</a></li>
             {% endfor %}
         </ul>
     </div>
