overhaul to report design to include all ROIs divided into four categories

--- a/templates/report.html
+++ b/templates/report.html
@@ -40,8 +40,9 @@
 
     div.table {
       display: inline-block;
-      width: 60%;
+      width: 50%;
       height: 150%;
+      font_size: 11px;
       margin-left: 5%;
       vertical-align: middle;
     }
@@ -50,7 +51,7 @@
       display: inline-block;
       width: 55%;
       height: 100%;
-      margin-left: -25%;
+      margin-left: -14%;
       vertical-align: middle;
     }
 
