--- a/templates/summary_section.html
+++ b/templates/summary_section.html
@@ -27,15 +27,22 @@
                     <td>The average frame-wise displacement, an expression of instantaneous head motion</a></td>
                 </tr>
                 <tr>
+                    <td>Superior/Middle/Inferior TG</td>
+                    <td>>Superior/Middle/Inferior Temporal Gyrus</td>
+                </tr>
+                <tr>
+                    <td>Superior/Middle/Inferior FG</td>
+                    <td>>Superior/Middle/Inferior Frontal Gyrus</td>
+                </tr>
+                <tr>
+                    <td>mTL</td>
+                    <td>>Middle Temporal Lobe</td>
+                </tr>
+                 <tr>
                     <td>Laterality Index (LI)</td>
                     <td><img src={{asym_ratio_eq}}
                     ...where “left activation” = “Left %” (as above)></td>
                 </tr>
-                <tr>
-                    <td>Sup./Mid./Inf. TG</td>
-                    <td>>Superior/Middle/Inferior Temporal Gyrus</td>
-                </tr>
-
                 </table>
         <h3 style="color:red;" style="margin-top: 50%">NOTE: activation maps are oriented in neurological convention (i.e. RAS)</h3>
     </div>
