minor aesthetic adjustments

--- a/templates/summary_section.html
+++ b/templates/summary_section.html
@@ -28,15 +28,15 @@
                 </tr>
                 <tr>
                     <td>Superior/Middle/Inferior TG</td>
-                    <td>>Superior/Middle/Inferior Temporal Gyrus</td>
+                    <td>Superior/Middle/Inferior Temporal Gyrus</td>
                 </tr>
                 <tr>
-                    <td>Superior/Middle/Inferior FG</td>
-                    <td>>Superior/Middle/Inferior Frontal Gyrus</td>
+                    <td>Sup/Mid/Inf FG</td>
+                    <td>Superior/Middle/Inferior Frontal Gyrus</td>
                 </tr>
                 <tr>
                     <td>mTL</td>
-                    <td>>Middle Temporal Lobe</td>
+                    <td>Middle Temporal Lobe</td>
                 </tr>
                  <tr>
                     <td>Laterality Index (LI)</td>
