--- a/templates/task_section.html
+++ b/templates/task_section.html
@@ -21,7 +21,7 @@
               {{table}}
         </div>
         <div class="barplot">
-            <object data={{bar_path}}></object>
+            <embed src={{bar_path}}>
         </div>
 </div>
 
