--- a/templates/task_section.html
+++ b/templates/task_section.html
@@ -21,7 +21,7 @@
               {{table}}
         </div>
         <div class="barplot">
-            <embed src={{bar_path}}>
+            <img class="svg-reportlet" src={{bar_path}}>
         </div>
 </div>
 
