add quotes to find asym ratio eq

--- a/templates/summary_section.html
+++ b/templates/summary_section.html
@@ -40,7 +40,7 @@
                 </tr>
                  <tr>
                     <td>Laterality Index (LI)</td>
-                    <td><img src={{asym_ratio_eq}}
+                    <td><img src="{{asym_ratio_eq}}"
                     ...where “left activation” = “Left %” (as above)></td>
                 </tr>
                 </table>
