big commit incl roi to mosaic

--- a/templates/report.html
+++ b/templates/report.html
@@ -72,6 +72,14 @@
         padding-bottom: 5px;
     }
 
+    .elem-image2 object.svg-reportlet {
+        width: 50%;
+        padding-bottom: 5px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     body {
         padding: 65px 10px 10px;
     }
