--- a/templates/task_section.html
+++ b/templates/task_section.html
@@ -15,7 +15,7 @@
     </div>
 
     <h3 class="elem-title">Surface</h3>
-    <div class="elem-image">
+    <div class="elem-image2">
         <object class="svg-reportlet" type="image/svg+xml" data={{surface_path}}></object>
     </div>
 
